# pert.dev

./: .gitignore
.github/workflows/: cd.yml  ci.yml  cleanup-preview.yml  pr-preview.yml
blog/: config.toml
blog/content/: _index.md
blog/content/posts/: aws-lambda-hashmap-bug.md  pr-previews-from-scratch.md  rupert-test-2.md
blog/content/projects/: willdolater.dev.md
scripts/: cleanup-preview.sh  deploy.sh  preview.sh
services/backend/: Cargo.toml  README.md
services/backend/src/: main.rs
services/glance/: glance.yml
