[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "1.0"

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.4", features=["util"]}
futures = "0.3"
